<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">
    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#B4B3B3"
        android:title="@string/title"

        android:titleTextColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Input Layout -->
    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_ejA"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="8dp" />

        <EditText
            android:id="@+id/etNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_a_comprobar"
            android:inputType="number" />

        <Button
            android:id="@+id/btnCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comprobar"
            app:icon="@drawable/ic_launcher_foreground"
            app:iconTint="#4DF00B" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/inputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_ejB"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="8dp" />

        <EditText
            android:id="@+id/etLado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lado"
            android:inputType="number" />

        <Button
            android:id="@+id/btnDraw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#181717"
            android:text="@string/dibujar"
            app:icon="@drawable/baseline_draw_24"
            app:iconTint="#F8790D" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>